			     BZFlag Release Notes
			     ====================

BZFlag 2.4.1
------------
* Added an option to have both leading and lagging radar shot lines
    - David Anderson
* Prevent prohibited solo bots from joining, rather than kick afterward
    - Scott Wichser, Jeff Makey
* Add thiefControl plugin which prevents stealing flags from teammates
    - Bernt Hansen, Scott Wichser
* Remove the -zoom command line option from bzflag - Jeff Makey
* Add fairCTF plugin - Chris Wible
* Allow plugins to specify a color when firing world weapons - Chris Wible
* Add autoFlagReset plugin - Chris Wible


BZFlag 2.4.0  "Wake the Dead" (2011-07-03)
------------------------------------------

* Shot messages are synchronized with position - Alfredo Tupone
* Added /playerlist for everyone - Thomas Stauer
* Added message type for properly handling /me actions - Scott Wichser
* Added BZDB option to hide flags on radar server side - David Anderson
* Removed /setpass /register /identify - David Anderson
* Handicap is computed on the server - Alfredo Tupone, Bernt Hansen
* Allow plugins to register custom flag types - Daniel Remenak
* Forced *image.bzflag.org for image downloads until user sets
  otherwise - David Anderson
* Accepted patch from McSpider, added OpenFFA - David Anderson
* Removed -requireUDP, now it is always required - David Anderson
* Accepted patch from McSpider, removed client option to turn off fog
    - David Anderson
* Accepted patch from McSpider, added -noTeamKills option - David Anderson
* Removed -3Dfx, -no3Dfx. Moved -geometry ->  -window <geometry-spec>
    - David Anderson
* Add ricochet on a per object basis for .bzw files - trepan, David Anderson
* serverControl plugin- Add option to ignore observers for server shutdowns
    - Bernt Hansen
* serverControl plugin- Only report ban file access errors once - Bernt Hansen
* serverControl plugin- Limit filesystem checks to once every 3 seconds
    - Bernt Hansen